@@ -1,3 +1,12 @@
+2011-08-03  Jeff Miller  <jeffm@apple.com>
+
+        Use of AVFoundation should default to off on Windows
+        https://bugs.webkit.org/show_bug.cgi?id=65660
+
+        Reviewed by Darin Adler.
+
+        * Shared/WebPreferencesStore.h: Change default value for AVFoundationEnabled to false on Windows, it's still true on other platforms.
+
 2011-08-03  Mark Rowe  <mrowe@apple.com>
 
         Bring some order to FeatureDefines.xcconfig to make it easier to follow.
